[package]
name = "tls_fingerprint"
version = "0.1.0"
authors = ["Sergey Frolov <sergey.frolov@colorado.edu>"]
include = ["src/*"]

[lib]
name ="tls_fingerprint"
crate-type = ["rlib", "staticlib"]

[dependencies]
pnet = "0.21.0"
pnet_packet = "0.21.0"
enum_primitive = "*"
time = "0.1"
num = "0.1"
libc = "~0.2"
pcap = "0.7"
postgres = "0.15.1"
hex-slice = "0.1"
rust-crypto = "^0.2"
byteorder = "1"
