[package]
name = "tls_fingerprint"
version = "0.1.0"
authors = ["Sergey Frolov <sergey.frolov@colorado.edu>"]
include = ["src/*"]

[lib]
name ="tls_fingerprint"
crate-type = ["rlib", "staticlib"]

[dependencies]
pnet = "0.28.0"
pnet_datalink = "0.28.0"
enum_primitive = "*"
time = "0.1"
num = "0.4.0"
libc = "0.2.101"
pcap = "0.8.1"
postgres = "0.19.1"
hex-slice = "0.1.4"
rust-crypto = "0.2.36"
byteorder = "1.4.3"
